# Mita

./: .gitignore  CMakeLists.txt  README.md  fix-permissions.sh  platformio.ini  sdkconfig.defaults  sdkconfig.demo_led  sdkconfig.esp32dev  start-all.sh
components/mita_sdk/: CMakeLists.txt
components/mita_sdk/core/: mita_client.cpp
components/mita_sdk/messaging/: message_handler.cpp
components/mita_sdk/transport/: lora_transport.cpp  protocol_selector.cpp
frontend/: openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  api-client-config.ts
frontend/src/api/: client.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: DashboardLayout.tsx  PacketMonitorPage.tsx  ProtectedRoute.tsx  RouterStatus.tsx  RoutingTablePage.tsx
frontend/src/components/atoms/: StatusCard.tsx
frontend/src/components/molecules/: PacketDetailModal.tsx  RoutedDevice.tsx
frontend/src/components/organisms/: DeviceTable.tsx  PacketTable.tsx  RoutingTable.tsx
frontend/src/components/ui/: toast.tsx  toaster.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: use-toast.tsx
frontend/src/pages/: DashboardPage.tsx  DevicePage.tsx  DeviceTablePage.tsx  LoginPage.tsx  PacketsPage.tsx  ProtocolsPage.tsx  RoutingPage.tsx  RoutingTablePage.tsx  SettingsPage.tsx
include/: mita_sdk.h  protocol.h
include/common/: protocol_types.h  transport_interface.h
include/core/: mita_client.h
include/crypto/: crypto_service.h
include/messaging/: message_handler.h
include/transport/: EspHal.h  ble_transport.h  lora_transport.h  protocol_selector.h  wifi_transport.h
main/: CMakeLists.txt  demo_bidirectional.cpp  demo_controller.cpp  demo_led.cpp  main.cpp  mita_sdk.cpp
main/core/: mita_client.cpp
main/crypto/: crypto_service.cpp
main/messaging/: message_handler.cpp
main/transport/: ble_transport.cpp  wifi_transport.cpp
router/: CMakeLists.txt  Makefile  build.sh  main.py  protocol.py  requirements.txt  router_config.json  run.sh
router/config/: router_config.json
router/core/: __init__.py  config.py  logger.py  router.py  transport_interface.py
router/include/api/: auth_controller.hpp  auth_interceptor.hpp  controller.hpp  dto.hpp  packets_controller.hpp  server.hpp  status_controller.hpp
router/include/api/controllers/: cors_helper.hpp  devices_controller.hpp  packets_controller.hpp  protocols_controller.hpp  routing_controller.hpp  settings_controller.hpp  status_controller.hpp
router/include/core/: config.hpp  logger.hpp  router.hpp  transport_interface.hpp
router/include/database/: models.hpp  orm.hpp  settings_model.hpp  user_model.hpp
router/include/infrastructure/: dhcp_server.hpp  wifi_manager.hpp
router/include/protocol/: protocol.hpp
router/include/services/: auth_service.hpp  device_management_service.hpp  packet_monitor_service.hpp  routing_service.hpp  settings_service.hpp  statistics_service.hpp
router/include/transports/: ble_backend.hpp  ble_backend.hpp.txt  ble_transport.hpp  ble_transport.hpp.txt  wifi_client_handler.hpp  wifi_transport.hpp
router/include/transports/ble/: ble_advertiser.hpp  ble_backend.hpp  ble_device_handler.hpp  ble_device_registry.hpp  ble_event.hpp  ble_event_processor.hpp  ble_event_queue.hpp  ble_l2cap_server.hpp  ble_transport.hpp  gatt_server.hpp
router/include/transports/lora/: lora_client_handler.hpp  lora_radio.hpp  lora_transport.hpp  pihal.h
router/infrastructure/: __init__.py  dhcp_server.py  wifi_manager.py
router/scripts/: build.sh  mita-router.service
router/services/: __init__.py  device_management_service.py  routing_service.py  statistics_service.py
router/src/: main.cpp
router/src/core/: config.cpp  logger.cpp  router.cpp  transport_interface.cpp
router/src/infrastructure/: dhcp_server.cpp  wifi_manager.cpp
router/src/protocol/: protocol.cpp
router/src/services/: device_management_service.cpp  packet_monitor_service.cpp  routing_service.cpp  statistics_service.cpp
router/src/transports/: ble_simplebluez_backend.cpp  ble_simplebluez_backend.cpp.txt  ble_transport.cpp  ble_transport.cpp.txt  wifi_client_handler.cpp  wifi_transport.cpp
router/src/transports/ble/: ble_device_handler.cpp  ble_device_registry.cpp  ble_event.cpp  ble_event_processor.cpp  ble_event_queue.cpp  ble_l2cap_server.cpp  ble_peripheral_backend.cpp  ble_simplebluez_backend.cpp  ble_transport.cpp  gatt_server.cpp
router/src/transports/lora/: lora_client_handler.cpp  lora_radio.cpp  lora_transport.cpp
router/tests/: CMakeLists.txt
router/transports/: __init__.py  ble_transport.py  wifi_transport.py
shared/config/: mita_config.h
shared/crypto/: crypto_utils.cpp  crypto_utils.h  gcm_crypto.cpp  gcm_crypto.h
shared/protocol/: packet_utils.h  protocol_types.h  transport_interface.h
shared/transport/: transport_constants.h
src/: main.cpp  protocol.cpp
src/core/: mita_client.cpp
src/crypto/: crypto_service.cpp
src/messaging/: message_handler.cpp
src/transport/: ble_transport.cpp  protocol_selector.cpp  wifi_transport.cpp
