# Mita Router Tests CMakeLists.txt
cmake_minimum_required(VERSION 3.16)

# Note: Tests are currently not implemented
# This file exists to prevent CMake errors when BUILD_TESTS=ON

message(STATUS "Test framework configured but no tests implemented yet")

# Future: Add Google Test or similar framework here
# find_package(GTest REQUIRED)
# 
# add_executable(router_tests
#     test_config.cpp
#     test_routing.cpp
#     test_statistics.cpp
# )
# 
# target_link_libraries(router_tests 
#     GTest::gtest_main
#     # Add router library components here
# )
# 
# add_test(NAME router_unit_tests COMMAND router_tests)

# For now, just create a placeholder test that always passes
add_test(NAME placeholder_test COMMAND ${CMAKE_COMMAND} -E echo "Tests not yet implemented - placeholder passes")